# spacegame-bmad

./: CLAUDE.md  Cargo.toml  Makefile  Trunk.toml  flake.nix  index.html
.bmad-output/: review-tracker.yaml
.claude/agents/: bmad-developer.md  bmad-reviewer.md  bmad-story-creator.md
.claude/commands/: bmad-run-sprint.md  bmad-sprint.md
.github/workflows/: ci.yml
_bmad-output/: brainstorming-session-2026-02-25.md  epics.md  game-architecture.md  game-brief.md  gdd.md
_bmad-output/implementation-artifacts/: 0-1-thrust-and-rotate-ship.md  0-2-fire-laser.md  0-3-fire-spread-projectiles.md  0-4-switch-weapons.md  0-5-destroy-asteroids-and-drones.md  0-6-visual-feedback.md  0-7-instant-respawn.md  0-8-runtime-spawning.md  1-1-seamless-world-generation.md  1-10-wasm-build.md  1-11-soft-speed-cap.md  1-2-biome-types.md  1-3-minimap-blips.md  1-4-world-map.md  1-5-chunk-loading.md  1-6-noise-biome-distribution.md  1-7-event-system.md  1-8-save-system.md  1-9-delta-save.md  2-1-tutorial-spawn.md  2-10-flying-to-shooting-trigger.md  2-11-gravity-well-visual.md  2-2-gravity-well.md  (+50 more)
docs/: sprint-backlog.md  sprint-report.md
saves/: player.ron  world.ron
src/: game_states.rs  lib.rs  main.rs
src/core/: mod.rs  (+11 more)
tests/: audio_infrastructure.rs  background_effects.rs  boss_loot.rs  chunk_loading.rs  collision_damage.rs  companion_core.rs  craft_upgrades.rs  death_credit_loss.rs  delta_roundtrip.rs  earn_credits.rs  economy_scaling.rs  event_system.rs  flight_physics.rs  instant_respawn.rs  laser_firing.rs  material_drops.rs  minimap_blips.rs  noise_biome.rs  performance.rs  runtime_spawning.rs  save_system.rs  spread_firing.rs  station_docking.rs  station_types.rs  station_ui.rs  tutorial_zone.rs  visual_feedback.rs  weapon_switching.rs  world_generation.rs  world_map.rs  wormhole_architecture.rs
wasm/: void_drifter.d.ts  void_drifter.js  void_drifter_bg.wasm.d.ts
(+54 files in other folders)
