[package]
name = "void_drifter"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["bevy/multi_threaded", "bevy/x11", "bevy/wayland", "directories"]
wasm = ["bevy/webgpu"]
dev = ["bevy-inspector-egui", "bevy_egui"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "2d",
    "bevy_ui",
] }
lyon_tessellation = "1.0"
bevy_kira_audio = "0.25.0"
serde = { version = "1", features = ["derive"] }
ron = "0.10"
rand = "0.9"
noise = "0.9"
directories = { version = "5", optional = true }

[dependencies.bevy-inspector-egui]
version = "0.36.0"
optional = true

[dependencies.bevy_egui]
version = "0.39"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
bevy-inspector-egui = "0.36.0"
bevy_egui = "0.39"
proptest = "1"

[lints.clippy]
unwrap_used = "deny"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
opt-level = 2
strip = true
